<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_legend_card"
    android:orientation="vertical"
    android:padding="@dimen/space_md">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_shield"
            app:tint="@color/legend_gold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_sm"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.Marvel.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stan_lee_title"
                android:textColor="@color/legend_gold" />

            <TextView
                style="@style/TextAppearance.Marvel.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stan_lee_name" />
        </LinearLayout>

        <TextView
            style="@style/TextAppearance.Marvel.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stan_lee_max_value"
            android:textColor="@color/legend_gold" />
    </LinearLayout>

    <TextView
        style="@style/TextAppearance.Marvel.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:text="@string/stan_lee_rarity" />

    <TextView
        style="@style/TextAppearance.Marvel.BodySecondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xs"
        android:text="@string/stan_lee_note" />
</LinearLayout>
